--- a/.vueserc
+++ b/.vueserc
@@ -1,4 +1,4 @@
 {
-  "outDir": "../documentation",
-  "markdownDir": "../documentation/components"
+  "outDir": "/documentation",
+  "markdownDir": "/documentation/components"
 }
