refactor(.env): update file

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ## Organization ##
 
 VUE_APP_COMPANY_NAME=""
-VUE_APP_COMPANY_CONTACT_PERSON="Re-Krass"
+VUE_APP_COMPANY_CONTACT_PERSON=""
 VUE_APP_COMPANY_STREET=""
 VUE_APP_COMPANY_POSTCODE=""
 VUE_APP_COMPANY_TOWN=""
