refactor(.env): add open graph variables

--- a/.env
+++ b/.env
@@ -10,3 +10,14 @@ VUE_APP_COMPANY_BUILDING=""
 VUE_APP_COMPANY_PHONE_NUMBER=""
 VUE_APP_COMPANY_FAX_NUMBER=""
 VUE_APP_COMPANY_EMAIL=""
+
+# Open Graph social cards
+VUE_APP_INDEX_OG_TITLE="Re-Krass Homepage"
+VUE_APP_INDEX_OG_DESCRIPTION="Re-Krass Homepage"
+VUE_APP_INDEX_OG_TYPE="image/png"
+VUE_APP_INDEX_OG_IMAGE_WIDTH="1280"
+VUE_APP_INDEX_OG_IMAGE_HEIGHT="640"
+VUE_APP_INDEX_OG_IMAGE="https://re-krass.github.io/images/re-krass-social.png"
+VUE_APP_INDEX_OG_IMAGE_ALT="Re-Krass social badge"
+VUE_APP_INDEX_OG_URL="https://re-krass.github.io/"
+VUE_APP_INDEX_OG_SITE_NAME="Re-Krass Homepage"
