refactor(.env): add twitter open graph variables

--- a/.env
+++ b/.env
@@ -21,3 +21,8 @@ VUE_APP_INDEX_OG_IMAGE="https://re-krass.github.io/images/re-krass-social.png"
 VUE_APP_INDEX_OG_IMAGE_ALT="Re-Krass social badge"
 VUE_APP_INDEX_OG_URL="https://re-krass.github.io/"
 VUE_APP_INDEX_OG_SITE_NAME="Re-Krass Homepage"
+
+# Twitter social cards
+VUE_APP_INDEX_TWITTER_CARD="summary_large_image"
+VUE_APP_INDEX_TWITTER_IMAGE_ALT="Re-Krass Social Badge"
+VUE_APP_INDEX_TWITTER_IMAGE_ALTG="Re-Krass Social Badge"
