--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "thread-loader": "^2.1.2",
     "tslib": "^1.10.0",
     "vue": "^2.6.10",
+    "vue-country-flag": "^1.3.1",
     "vue-highlightjs": "^1.3.3",
     "vue-router": "^3.0.3",
     "vue-router-sitemap": "0.0.4",
     "vue-style-loader": "^4.1.2",
     "vuese": "^1.4.7",
-    "vuetify": "^1.5.13"
+    "vuetify": "^1.5.13",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
