--- a/package.json
+++ b/package.json
@@ -10,58 +10,58 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
-    "babel-core": "^7.0.0-0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "cache-loader": "^4.1.0",
-    "core-js": "^2.6.5",
+    "core-js": "^3.6.1",
     "data-store": "^3.1.0",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "store": "^2.0.12",
-    "thread-loader": "^2.1.2",
+    "thread-loader": "^2.1.3",
     "tslib": "^1.10.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-country-flag": "^1.3.1",
     "vue-highlightjs": "^1.3.3",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.1.3",
     "vue-router-sitemap": "0.0.4",
     "vue-style-loader": "^4.1.2",
     "vuese": "^1.4.7",
-    "vuetify": "^1.5.13",
+    "vuetify": "^1.5.21",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@vue/babel-preset-app": "^3.9.2",
-    "@vue/cli-plugin-babel": "^3.6.0",
-    "@vue/cli-plugin-eslint": "^3.6.0",
-    "@vue/cli-service": "^3.6.0",
+    "@babel/core": "^7.7.7",
+    "@vue/babel-preset-app": "^3.12.1",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-prettier": "^4.0.1",
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
-    "css-loader": "^3.1.0",
-    "docsify-cli": "^4.3.0",
+    "@vue/test-utils": "^1.0.0-beta.30",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "css-loader": "^3.4.0",
+    "docsify-cli": "^4.4.0",
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-pug": "^1.1.1",
-    "eslint-plugin-vue": "^5.0.0",
-    "husky": "^3.0.2",
-    "jest": "^24.8.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "husky": "^3.1.0",
+    "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
     "jest-transform-stub": "^2.0.0",
-    "lint-staged": "^8.1.5",
+    "lint-staged": "^8.2.1",
     "marked": "^0.7.0",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
-    "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
-    "vue-jest": "^3.0.4",
-    "vue-loader": "^15.7.1",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.39.1"
+    "sass": "^1.24.0",
+    "sass-loader": "^7.3.1",
+    "vue-jest": "^3.0.5",
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.41.5"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
