--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "vue-router-sitemap": "0.0.4",
     "vue-style-loader": "^4.1.2",
     "vuese": "^1.4.7",
-    "vuetify": "^2.1.15",
+    "vuetify": "^2.1.16",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -41,11 +41,13 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "css-loader": "^3.4.0",
+    "deepmerge": "^4.2.2",
     "docsify-cli": "^4.4.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-pug": "^1.1.1",
     "eslint-plugin-vue": "^6.1.2",
+    "fibers": "^4.0.2",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
