--- a/package.json
+++ b/package.json
@@ -30,18 +30,25 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
+    "css-loader": "^3.4.0",
+    "data-store": "^4.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.5.0",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
+    "store": "^2.0.12",
     "vue-cli-plugin-vuetify": "^2.0.3",
+    "vue-highlightjs": "^1.3.3",
     "vue-template-compiler": "^2.6.10",
+    "vuese": "^1.4.7",
     "vuetify-loader": "^1.3.0"
   },
   "gitHooks": {
