--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "husky": "^3.1.0",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
+    "vue-country-flag": "^1.3.1",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
