--- a/.vueserc
+++ b/.vueserc
@@ -1,4 +1,6 @@
 {
-  "outDir": "./docs",
+  "title": "components",
+  "genType": "docute",
+  "outDir": "./documentation",
   "markdownDir": "./components"
 }
